<resources>
    <string name="app_name">shoes_app</string>
    <string name="action_settings">Cài đặt</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Tiếp theo</string>
    <string name="previous">Trước</string>
    <string name="key_map">AIzaSyC659j_v2LylmdRJsQ3Uw9ysEGLE9TDRVw</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="capture">Máy Ảnh</string>
    <string name="selectImg">Chọn Nguồn Ảnh</string>
    <string name="gallery">Thư Viện</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="congratulation">Chào mừng trở lại !</string>
    <string name="force_input_email">Vui lòng nhập email</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="is_number_phone">Vui lòng nhập đủ số điện thoại</string>
    <string name="error_format_email">Vui lòng nhập đúng dạng email</string>
    <string name="sign_in_to_your_account">Đăng nhập vào tài khoản của bạn</string>
    <string name="name_login">Email Đăng Nhập</string>
    <string name="password">Nhập mật khẩu</string>
    <string name="remember">Ghi nhớ</string>
    <string name="login">Đăng nhập</string>
    <string name="new_user">Bạn chưa có tài khoản ?" "</string>
    <string name="sign_in">Đăng ký</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="confirm_password">Nhập lại mật khẩu</string>
    <string name="old_user">Bạn đã có tài khoản ?" "</string>
    <string name="your_email">Nhập email của bạn</string>
    <string name="create_acc">Tạo tài khoản</string>
    <string name="quick_create">Tạo tài khoản nhanh</string>
    <string name="full_name">Nhập vào tên đầy đủ của bạn</string>
    <string name="date">Nhập vào ngày sinh</string>
    <string name="email_config">Nhập vào email</string>
    <string name="phone_config">Nhập vào số điện thoại</string>
    <string name="text_continue">Tiếp tục</string>
    <string name="txt2_custom_dialog">Tài khoản của bạn sẵn sàng sử dụng.Bạn sẽ tiến đến Trang chủ sau giây lát</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="ba_dinh_const">Ba Đình,Hà Nội</string>
    <string name="detail_address">Địa chỉ chi tiết</string>
    <string name="point_name">Tên địa điểm</string>
    <string name="home">Nhà</string>
    <string name="default_address">Đặt làm địa chỉ mặc định</string>
    <string name="add">Thêm</string>
    <string name="success">Thành công</string>
    <string name="create_your_password">Tạo mật khẩu mới của bạn</string>
    <string name="update">Cập nhật</string>
    <string name="general_notification">Thông báo</string>
    <string name="sound">Âm thanh</string>
    <string name="vibrate">Rung</string>
    <string name="special_offers">Ưu đãi</string>
    <string name="promo_vs_discount">Khuyến mại và Giảm giá</string>
    <string name="payments">Thanh toán</string>
    <string name="cashback">Hoàn tiền</string>
    <string name="app_updates">Cập nhật ứng dụng</string>
    <string name="new_service_available">Dịch vụ mới</string>
    <string name="new_tips_available">Mẹo</string>
    <string name="input_otp">Nhập OTP</string>
    <string name="sent_otp_code">Mã đã gửi đến bạn</string>
    <string name="resend_code_otp">Gửi lại mã</string>
    <string name="send">Gửi</string>
    <string name="confirm">Xác nhận</string>
    <string name="profile">Cấu hình</string>
    <string name="phone_suggest">0123456789</string>
    <string name="edit_info">Sửa thông tin</string>
    <string name="address">Địa chỉ</string>
    <string name="name">Họ và tên</string>
    <string name="logout">Đăng xuất</string>
    <string name="confirm_logout">Bạn chắc chắn muốn đăng xuất?</string>
    <string name="cancel">Cancel</string>
    <string name="agree">Đồng ý</string>
    <string name="otp_verification">Xác thực OTP</string>
    <string name="send_otp_to_your_mobile_phone_number">Mã OTP sẽ gửi đến số điện thoại</string>
</resources>