<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="SpUsage"
    tools:context=".framework.presentation.ui.profile.editProfile.EditProfileFragment">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_background_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/baseline_keyboard_backspace_24"
        app:title="Fragment Title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutInputName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0dp"
        android:layout_margin="@dimen/dimen_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="DuplicateIds,MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border_edt_config_info"
            android:drawablePadding="@dimen/dimen_10dp"
            android:hint="@string/full_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:padding="@dimen/dimen_17dp"
            android:textColor="@color/background_color_field"
            android:textSize="@dimen/dimen_15dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutInputDate"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0dp"
        android:layout_margin="@dimen/dimen_16dp"
        app:endIconDrawable="@drawable/baseline_date_range_24"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutInputName"
        tools:ignore="DuplicateIds,MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dateEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border_edt_config_info"
            android:drawablePadding="@dimen/dimen_10dp"
            android:focusable="false"
            android:hint="@string/date"
            android:imeOptions="actionNext"
            android:inputType="date"
            android:padding="@dimen/dimen_17dp"
            android:textColor="@color/background_color_field"
            android:textSize="@dimen/dimen_15dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutInputMail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0dp"
        android:layout_margin="@dimen/dimen_16dp"
        app:endIconDrawable="@drawable/baseline_attach_email_24"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutInputDate"
        tools:ignore="DuplicateIds,MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mailEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border_edt_config_info"
            android:drawablePadding="@dimen/dimen_10dp"
            android:hint="@string/email_config"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:padding="@dimen/dimen_17dp"
            android:textColor="@color/background_color_field"
            android:textSize="@dimen/dimen_15dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutInputPhone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0dp"
        android:layout_margin="@dimen/dimen_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutInputMail"
        tools:ignore="DuplicateIds,MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border_edt_config_info"
            android:drawablePadding="@dimen/dimen_10dp"
            android:hint="@string/phone_config"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLength="10"
            android:padding="@dimen/dimen_17dp"
            android:textColor="@color/background_color_field"
            android:textSize="@dimen/dimen_15dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:background="@drawable/border_edt_config_info"
        android:padding="@dimen/dimen_17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutInputPhone"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnNextPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginBottom="@dimen/dimen_45dp"
        android:background="@drawable/custom_button_login"
        android:backgroundTint="@color/black"
        android:text="@string/update"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
       />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/progressBar"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="@dimen/dimen_100dp"
            android:layout_height="@dimen/dimen_100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>